# ptablaxml

./: Makefile.am  aclocal.m4  configure.ac  meson.build  mx.pwmc.Ptablaxml.json  vala.mk  vala_gtk.mk  valalib_introspection.mk
data/: meson.build
src/: Makefile.am  main.vala  meson.build  ptx-reader.vala  resources.xml  window.ui  window.ui~  window.vala
tests/: tabla.txt
